--- a/menu.html
+++ b/menu.html
@@ -49,6 +49,12 @@
     <h2 class="page-title font-enaglish">Menu</h2>
   </div>
 
+  <main class="wrapper grid">
+    <div class="item">
+      <img src="" alt="">
+    </div>
+  </main>
+
   <footer class="page-footer">
     <h3 class="heading-large font-enaglish">Information</h3>
     <table class="info">
